[package]
edition = "2021"
name = "grammers_app_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = {git = "https://github.com/Lonami/grammers.git", features = ["proxy"]}
grammers-mtsender = {git = "https://github.com/Lonami/grammers.git"}
grammers-session = {git = "https://github.com/Lonami/grammers.git"}
grammers-tl-types = {git = "https://github.com/Lonami/grammers.git"}
log = "0.4.14"
simple_logger = {version = "1.11.0", default-features = false, features = ["colors"]}
tokio = {version = "1.5.0", features = ["rt", "signal"]}
